# experiments

InteractiveMap/: index.html  maps.js
bash/: crackISO.sh  retries.sh
docker/: Dockerfile
docker/enm/: Versant.versant  startDocker.sh
docker/nodejs/: Dockerfile
dot/: Class.dot  HW2.dot  vappEnv.dot  vappEnv2.dot  vappEnv3.dot  vappEnv4.dot  vapptest.dot
groovy/: mndDeploymentDiagram.groovy
haskell/: a.cabal  baby.hs  greetings.hs  main.hs
jdk8/: Formula.java  Main.java  Main2.java
nodejs/: basic_events_rtw.js  events_chat.js  fileTool.js  passingFunctions.js  readWriteFiles.js  webserver_2_events_rtw.js  webserver_events_rtw.js  webserver_pipe.js  webserver_pipe_to_file.js  webserver_rtw.js  webserver_timeout_rtw.js  webserver_upload_file.js
nodejs/logger/: apps.js  logger.js
raphael/: index.html  maps.js  maps2.js
ruby/: script.rb
scala/: Cafe.scala
vim/: log.vim  vimrc
