Name:                greetings
Version:             0.0
Description:         say Hi
License:             GPL
Author:              Carlos Patino
Maintainer:          carlospatinos@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2 
 
Executable greetings
   Main-is:           main.hs
   Build-Depends:     base >= 3 && < 5 